# icicle-snark

./: .gitignore  Cargo.toml  README.md
benchmark/800k/: input.json
benchmark/keyless/: README.md
benchmark/sha256/: sha256_512.circom
examples/python/: main.py
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
icicle/: CMakeLists.txt
icicle/backend/cpu/: CMakeLists.txt
icicle/backend/cpu/include/: ntt_cpu.h
icicle/backend/cpu/src/field/: cpu_ntt.cpp  cpu_vec_ops.cpp
icicle/backend/cuda/: .gitignore  CMakeLists.txt  README.md
icicle/backend/cuda/include/: cuda_math.h  transcript_utils.cuh  version.h
icicle/backend/cuda/include/gpu-utils/: device_initializer.h  utils.h
icicle/backend/cuda/include/msm/: cuda_msm_config.cuh
icicle/backend/cuda/include/ntt/: cuda_ntt_config.cuh  mixed_radix_thread_level_ntt.cuh  ntt.cuh
icicle/backend/cuda/src/: cuda_device_api.cu
icicle/backend/cuda/src/curve/: cuda_mont.cu
icicle/backend/cuda/src/field/: cuda_mont.cu  cuda_vec_ops.cu
icicle/backend/cuda/src/msm/: Makefile  cuda_msm.cu  cuda_msm.cuh  cuda_msm_g2.cu
icicle/backend/cuda/src/ntt/: Makefile  cuda_ntt.cu  mixed_radix_ntt.cu
icicle/cmake/: curve.cmake  features.cmake  field.cmake  target_editor.cmake
icicle/include/icicle/: vec_ops.h
icicle/include/icicle/backend/: ntt_backend.h  vec_ops_backend.h
icicle/include/icicle/fields/: field_config.h  id.h
icicle/include/icicle/math/: modular_arithmetic.h
icicle/src/: ntt.cpp  vec_ops.cpp
icicle/src/fields/: ffi_extern.cpp
scripts/: format_all.sh  setup.sh
src/: cache.rs  conversions.rs  file_wrapper.rs  icicle_helper.rs  lib.rs  main.rs  proof_helper.rs  zkey.rs
wrappers/rust/: Cargo.toml
wrappers/rust/icicle-core/src/: lib.rs
wrappers/rust/icicle-core/src/ntt/: tests.rs
wrappers/rust/icicle-core/src/pairing/: mod.rs
wrappers/rust/icicle-core/src/vec_ops/: mod.rs  tests.rs
wrappers/rust/icicle-curves/icicle-bls12-377/: Cargo.toml  build.rs
wrappers/rust/icicle-curves/icicle-bls12-377/src/msm/: mod.rs
wrappers/rust/icicle-curves/icicle-bls12-377/src/vec_ops/: mod.rs
wrappers/rust/icicle-curves/icicle-bls12-381/: Cargo.toml  build.rs
wrappers/rust/icicle-curves/icicle-bls12-381/src/: lib.rs
wrappers/rust/icicle-curves/icicle-bn254/: Cargo.toml  build.rs
wrappers/rust/icicle-curves/icicle-bn254/src/: lib.rs
wrappers/rust/icicle-curves/icicle-bn254/src/pairing/: mod.rs
wrappers/rust/icicle-curves/icicle-bw6-761/: Cargo.toml  build.rs
wrappers/rust/icicle-runtime/: build.rs
wrappers/rust/icicle-runtime/src/: memory.rs
