[package]
name = "icicle-snark"
version = "0.1.0"
edition = "2021"

[dependencies]
icicle-core = { git = "https://github.com/ingonyama-zk/icicle", package = "icicle-core", version = "3.6"}
icicle-bn254 = { git = "https://github.com/ingonyama-zk/icicle", package = "icicle-bn254", version = "3.6"}
icicle-runtime = { git = "https://github.com/ingonyama-zk/icicle", package = "icicle-runtime", version = "3.6"}
serde = { version="1.0.216", features = ["derive"] }
serde_json = { version="1.0.125" } 
num-bigint = "0.4.6"
bincode = "1.3.3"
rayon = "1.10.0"
memmap = "0.7.0"
clap = { version="4.5.23", features=["derive"] }

[features]
no-randomness=[]
