[package]
name = "icicle-snark"
version = "0.1.0"
edition = "2021"

[dependencies]
icicle-core = { path = "./wrappers/rust/icicle-core", package = "icicle-core"}
icicle-bn254 = { path = "./wrappers/rust/icicle-curves/icicle-bn254", package = "icicle-bn254"}
icicle-runtime = { path = "./wrappers/rust/icicle-runtime", package = "icicle-runtime"}
serde = { version="1.0.216", features = ["derive"] }
serde_json = { version="1.0.125" } 
num-bigint = "0.4.6"
bincode = "1.3.3"
rayon = "1.10.0"
memmap = "0.7.0"
clap = { version="4.5.23", features=["derive"] }

[features]
no-randomness=[]
