[package]
name = "icicle-bn254"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Rust wrapper for the CUDA implementation of BN254 pairing friendly elliptic curve by Ingonyama"
homepage.workspace = true
repository.workspace = true

[dependencies]
icicle-core = { workspace = true }
icicle-runtime = { workspace = true }
serde = "1.0.219"

[dev-dependencies]
criterion = "0.3"
serial_test = "3.0.0"
serde_json = "1.0.140"

[build-dependencies]
cmake = "0.1.50"

[features]
default = []
no_g2 = []
cuda_backend = ["icicle-runtime/cuda_backend"]
pull_cuda_backend = ["icicle-runtime/pull_cuda_backend"]
metal_backend = ["icicle-runtime/metal_backend"]
pull_metal_backend = ["icicle-runtime/pull_metal_backend"]
vulkan_backend = ["icicle-runtime/vulkan_backend"]
pull_vulkan_backend = ["icicle-runtime/pull_vulkan_backend"]